# code-dream

./: .gitignore  Makefile  README.md  code-dream-char-info-set.c  code-dream-char-info-set.h  code-dream-char-info.c  code-dream-char-info.h  code-dream-code-display-set.c  code-dream-code-display-set.h  code-dream-code-display.c  code-dream-code-display.h  code-dream-format-type.h  code-dream-image.c  code-dream-image.h  code-dream-options.h  code-image-set.c  code-image-set.h  code-source.c  code-source.h  configure.ac  defines.h  highlight.el  main.c  theme.el
src/: Makefile.am  code-dream-char-info.c  code-dream-char-info.h  code-dream-code-display-set.c  code-dream-code-display-set.h  code-dream-code-display.c  code-dream-code-display.h  code-dream-face.h  code-dream-filter-list.c  code-dream-filter-list.h  code-dream-filter.c  code-dream-filter.h  code-dream-format-type.h  code-dream-gif-writer.c  code-dream-gif-writer.h  code-dream-image.c  code-dream-image.h  code-dream-loading-screen.c  code-dream-loading-screen.h  code-dream-options.h  code-dream-smoke-list.c  code-dream-smoke-list.h  code-dream-smoke.c  code-dream-smoke.h  code-dream-theme.c  code-dream-theme.h  code-dream-video-writer.c  code-dream-video-writer.h  code-image-set.c  code-image-set.h  code-source.c  code-source.h  filter-flicker.c  filter-flicker.h  filter-jiggle.c  filter-jiggle.h  filter-spasm.c  filter-spasm.h  filters.h  main.c
