bin_PROGRAMS = code-dream
code_dream_SOURCES = code-source.h \
 code-image-set.h \
 code-dream-image.h \
 code-dream-char-info-set.h \
 code-dream-char-info.h \
 code-dream-format-type.h \
 code-dream-code-display-set.h \
 code-dream-code-display.h \
 code-dream-options.h \
 main.c \
 code-source.c \
 code-image-set.c \
 code-dream-image.c \
 code-dream-char-info-set.c \
 code-dream-char-info.c \
 code-dream-code-display-set.c \
 code-dream-code-display.c

code_dream_CFLAGS = $(SDL_CFLAGS)
code_dream_LDFLAGS = $(SDL_LIBS)
